   on the registration page.  (Jamie Wilkinson)
 * Redirect back to original URL after signing in.  (John Ferlito)
 * Create a symlink in the public/ static files directory pointing to
   MoinMoin attachments as a workaround for moin attachment brokenness.
   (John Ferlito)
 * Made sure that people don't register more than once. (Jamie Wilkinson)

0.2.4
-----

 * Fixed rego email teesize message
 * Dinner price on rego form
 * Added Open Day registration

0.2.3
-----

 * Add accommodation data model.
 * Added validation schema for existing handle/display names.
 * Merged A+MX email address domain validation from Jiri Baum.

0.2.2
-----

 * Changed from pydns validation to socket.gethostbyname (this was
   done due to a perceived bug with timeouts which was a different bug 
   affecting all errors, so it could be rolled back)
 * Include raw HTML into a Mghty template from outside the egg
 * Random content changes

0.2.1
-----

 * Add validator to prevent 500 errors when trying to register with an
   existing account.

0.2
---

 * The "I think we're ready to take registrations" release.
 * Add more editors, shells, and distros (and by "add" of course I mean
   "remove and clean up").
 * Add the silly description to the registration form.
 * Store the previous LCA attendance and Miniconf preference data (hackishly
   but does the job).
 
0.1.18
------

 * Use dnspython instead of PyDNS for email address validation, as it's
   easier to install.

0.1.17
------

 * Added email address validators for the registration schema.
 * Added email response for registration process.
 * Store creation timestamp in registrations.
 * Add phone number to registration form.
 * Formatting and style changes to registration form.

0.1.16
------

 * Added registration templates, business logic, and stub data model.

0.1.15
------

 * Modify CFP submission to only allow submissions from organisers.
 * Show if a speaker has requested travel assistance on proposal view page.

0.1.14
------
